<resources>
    <string name="app_name">OTGLocation</string>
    <string name="google_map_key">AIzaSyBP4eH7FbwrY8bz77tYfcHlkN_1FlpVDtE</string>
    <string name="log">日志(日志框内快速右滑清除日志)</string>
    <string name="connect_status">设备连接状态:</string>
    <string name="select_location">选取坐标</string>
    <string name="confirm">确定坐标</string>
    <string name="disconnected">未连接</string>
    <string name="connected">已连接</string>
    <string name="product_version">系统版本:</string>
    <string name="choose_map">选择地图:</string>
    <string name="google_map">谷歌地图</string>
    <string name="amap_map">高德地图</string>
    <string name="device_name">设备名称:</string>
    <string name="latitude">纬度:</string>
    <string name="longitude">经度:</string>
    <string name="alias">别名</string>
    <string name="about_help">关于/帮助</string>
    <string name="install_lib">安装组件</string>
    <string name="uninstall_lib">删除组件</string>
    <string name="restore_location">还原定位</string>
    <string name="modify_location">修改定位</string>
    <string name="root_status">Root:</string>
    <string name="please_check_permissions">应用缺少权限!</string>
    <string name="root_hint">系统尚未root，程序无法将正常运行!</string>
    <string name="download_offline_map">下载离线地图</string>
    <string name="move_map">移动到选中坐标</string>
    <string name="local_location">选取本地坐标</string>
    <string name="save_location">保存到本地坐标</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="please_select_location">请选择坐标</string>
    <string name="please_input_info">请输入别名</string>
    <string name="saved_successfully">保存成功</string>
    <string name="save_failed">保存失败,本地已有相同别名</string>
    <string name="lib_status">组件安装状态:</string>
    <string name="developer_img">iOS开发者驱动挂载:</string>
    <string name="cancel_location_offset">取消坐标转换(GCJ-02转WGS84)</string>
    <string name="about">源代码:https://github.com/cczhr/OTGLocation\n仅供学习 请勿使用于非法途径\n\n首次安装打开app先点击安装组件,需要完全卸载app时前先点击删除组件再常规卸载\n\n使用前请将对应iOS开发者驱动放到/sdcard/lockdown/drivers/路径下\n\n例如iOS版本14.4,则在/sdcard/lockdown/drivers/14.4/路径下放入开发者驱动DeveloperDiskImage.dmg和DeveloperDiskImage.dmg.signature\n\niOS开发者驱动可以在Xcode提取/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/DeviceSupport/]\n\n如苹果设备弹出[要信用此电脑吗?]对话框时请选择[信任]</string>
    <string name="search">搜索</string>
    <string name="download_the_developer_driver">下载开发者驱动</string>
    <string name="please_wait">请稍等…</string>
    <string name="usb_tips">USB权限申请被拒绝</string>
</resources>