<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/latitude"
        android:layout_margin="4dp"
        tools:text="@string/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/longitude"
        android:layout_margin="4dp"
        tools:text="@string/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:text="@string/alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/info"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>




    </LinearLayout>





</LinearLayout>